[tool.poetry]
name = "4h"
version = "0.1.0"
description = "4H docs for computer project"
authors = ["Frank Schmidt <frankschmidt902@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
